Improve the approach for the full-v r2 plugin

--- a/examples/plugin/Makefile
+++ b/examples/plugin/Makefile
@@ -1,3 +1,14 @@
+R2_LIBEXT=so #$(shell r2 -H R2_LIBEXT)
+R2_USER_PLUGINS=$(shell r2 -H R2_USER_PLUGINS)
+VFLAGS?=--enable-globals
+
 all:
-	v -shared plugin.v
-	cp plugin.so ~/.local/share/radare2/plugins/core_v.dylib
+	v $(VFLAGS) -shared plugin.v
+	v -shared -o a.c plugin.v
+	$(MAKE) install
+
+install:
+	cp -f plugin.$(R2_LIBEXT) $(R2_USER_PLUGINS)
+
+uninstall:
+	rm -f $(R2_USER_PLUGINS)/plugin.$(R2_LIBEXT)
